# Python-Voice-Recorder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PHASE3_FINAL_COMPLETION_REPORT.txt  README.md  RELEASE_CHECKLIST.md  check_db_tables.py  import_fallbacks_plan.backup_2025-10-09.csv  import_fallbacks_plan.csv  pip-audit-report.json  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  storage_config_assessment_and_plan.md  test_storage_config.py
Python - Voice Recorder/: .env.template  .gitignore  .pre-commit-config.yaml  AUDIO_REPAIR_ENHANCEMENT_PLAN.md  AUDIO_REPAIR_FINAL_STATUS.md  AUDIO_REPAIR_IMPLEMENTATION_COMPLETE.md  AUDIO_REPAIR_TEST_PLAN.md  AUDIO_REPAIR_TEST_VERIFICATION.md  CONTRIBUTING.md  Launch_VoiceRecorderPro.bat  Launch_VoiceRecorderPro.ps1  OVERALL_PROGRESS.md  PHASE2_COMPLETION_REPORT.md  PHASE2_DOCS_INDEX.md  PHASE2_FINAL_SUMMARY.txt  PHASE2_STATUS.txt  PHASE2_SUMMARY.md  PHASE3_1_COMPLETION.md  PHASE3_2_COMPLETION.md  PHASE3_2_STATUS_CHECKPOINT.txt  PHASE3_3_COMPLETION.md  PHASE3_3_STATUS_CHECKPOINT.txt  PHASE3_4_COMPLETION.md  PHASE3_4_STATUS_CHECKPOINT.txt  PHASE3_5_COMPLETION.md  PHASE3_INTEGRATION_PLAN.md  PHASE3_STATUS_CHECKPOINT.txt  PHASE7_COMPLETION_REPORT.md  PHASE7_DELIVERABLES_INDEX.md  PHASE7_EXECUTION_SUMMARY.txt  PHASE7_VERIFICATION_AND_DEPLOYMENT.txt  QUICKSTART.md  README.md  README_BUILD.md  TESTING.md  alembic.ini  audio_processing.py  audio_recorder.py  baselines.json  config_manager.py  (+21 more)
Python - Voice Recorder/alembic/: README.md  env.py  script.py.mako
Python - Voice Recorder/assets/: icon.py
Python - Voice Recorder/cloud/: __init__.py  _file_manager.py  _folder_manager.py  _lazy.py  _query_builder.py  _storage_info.py  auth_manager.py  cloud_fallback.py  cloud_ui.py  dedupe.py  drive_manager.py  exceptions.py  feature_gate.py  google_uploader.py  job_dialog.py  job_queue.py  job_queue.py.bak_20251008_184714  job_queue_sql.py  metadata_schema.py  singleflight.py  storage_ops.py  upload_utils.py  uploader.py
Python - Voice Recorder/config/: client_secrets.json.example  client_secrets_template.json  presets.json
Python - Voice Recorder/core/: __init__.py  database_context.py  database_health.py  error_boundaries.py  logging_config.py  metrics_aggregator.py  metrics_baseline.py  performance.py  pii_filter.py  structured_logging.py  telemetry_config.py  telemetry_context.py
Python - Voice Recorder/docs/: AGENT_PROGRESS_AND_CHALLENGES.md  AI_AGENT_GUIDE.md  AUDIO_CORRUPTION_GUIDE.md  BACKEND_DESIGN.md  BACKEND_ENHANCEMENT_PLAN.md  BACKEND_IMPROVEMENTS.md  BUILD_SCRIPT_ISSUES.md  CLEANUP_ACTION_PLAN.md  CLEAN_RELEASE_GUIDE.md  CLI.md  CONSTRAINTS_REFACTOR.md  CRITICAL_COMPONENTS_TEST_REPORT.md  DATABASE_CONTEXT_ANALYSIS.md  DAY1_IMPLEMENTATION_SUMMARY.md  DAY2_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  ENHANCED_FILE_STORAGE_MIGRATION_SUMMARY.md  ENHANCED_FILE_STORAGE_REFACTORING_PLAN.md  MIGRATIONS.md  MIGRATION_PROGRESS.md  PHASE1_IMPLEMENTATION_PLAN.md  PHASE_1_VALIDATION_REPORT.md  PHASE_2_VALIDATION_REPORT.md  PHASE_3_4_IMPLEMENTATION_SUMMARY.md  PHASE_3_AUDIO_INTEGRATION_SUMMARY.md  PHASE_3_AUDIO_RECORDER_ANALYSIS.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_5_ORCHESTRATOR_DESIGN.md  PRIORITIZATION_MATRIX.md  PROJECT_STRUCTURE_REORGANIZATION.md  README.md  RECONCILIATION_SUMMARY.md  STORAGE_CONFIG_IMPLEMENTATION_PLAN.md  STORAGE_CONFIG_ORCHESTRATOR_LESSONS_LEARNED.md  STORAGE_CONFIG_PROJECT_SUMMARY.md  STORAGE_CONFIG_REFACTORING_PLAN.md  STORAGE_INFO_ISSUES_ANALYSIS.md  STORAGE_INFO_REFACTOR_COMPLETION_REPORT.md  TASK20_DAY4_COMPLETE.md  TASK20_DAY4_PROGRESS.md  (+8 more)
cloud/: __init__.py
(+290 files in other folders)
