[metadata]
name = voice-recorder
version = 0.0.0
description = Voice Recorder Pro

[options]
package_dir =
    = Python - Voice Recorder/src
packages = find:
install_requires =
    # runtime dependencies are maintained in requirements.txt

[options.extras_require]
; extras_require removed because setuptools cannot parse '-r' file references reliably.
; Install dev dependencies with: python -m pip install -r requirements_dev.txt
