[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-recorder"
version = "0.0.0"
description = "Voice Recorder Pro (local editable install for development)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
