[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-recorder"
version = "2.1.0"
description = "Voice Recorder Pro - Professional audio recording and editing with cloud backup"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.2",
    "pydub>=0.25.1",
    "sounddevice>=0.4.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "numpy>=1.26.0",
    "matplotlib>=3.10.0",
    "psutil>=5.9.0",
    "keyring>=23.0.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.151.0",
]

[tool.setuptools]
packages = ["voice_recorder", "cloud", "core", "models", "services", "repositories", "tools", "scripts"]
